--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -2,7 +2,7 @@ name: news-to-mastodon
 
 on:
   schedule:
-    - cron: "0 * * * *"   # hourly, UTC
+    - cron: "*/20 * * * *"
   workflow_dispatch:
 
 permissions:
