--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -3,7 +3,7 @@ name: news-to-mastodon
 on:
   schedule:
     - cron: "0,15,30,45 * * * *"   # primary :00/:20/:40 UTC
-    - cron: "7,22,37,52 * * * *"   # backup  :01/:21/:41 UTC
+    # - cron: "7,22,37,52 * * * *"   # backup  :01/:21/:41 UTC
   workflow_dispatch:
 
 permissions:
