--- a/.github/workflows/askbot.yml
+++ b/.github/workflows/askbot.yml
@@ -43,7 +43,7 @@ jobs:
         env:
           # Mastodon auth
           MASTODON_TOKEN: ${{ secrets.MASTODON_TOKEN }}
-          MASTODON_INSTANCE: ${{ vars.MASTODON_INSTANCE || 'https://mastodon.uno' }}
+          MASTODON_INSTANCE: ${{ vars.MASTODON_INSTANCE || 'https://mastodon.social' }}
 
           # State & meta
           ASK_STATE_PATH: ${{ vars.ASK_STATE_PATH || 'data/ask_state.json' }}
@@ -101,6 +101,7 @@ jobs:
           git commit -m "askbot: update state $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "No state changes"
 
           git push || echo "Push skipped (branch protected or no changes)"
+
 
 
 
